--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 		<title>Multiverse by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/miniport.css" />
+
 		<link rel="stylesheet" href="assets/css/main.css" />
+			<link rel="stylesheet" href="assets/css/miniport.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -19,73 +20,40 @@
 			<div id="wrapper">
 
 				<!-- Nav -->
-					<nav id="nav">
-						<ul class="container">
-							<li><a href="#top">Top</a></li>
-							<li><a href="#work">Work</a></li>
-							<li><a href="#portfolio">Portfolio</a></li>
-							<li><a href="#contact">Contact</a></li>
-						</ul>
-					</nav>
-
+					<div class='logo-container'>
+						<img src='images/audiorosemary.png' alt='Audio Rosemary'/>
+					</div>
 				<!-- Home -->
-					<article id="top" class="wrapper style1">
-						<div class="container">
-							<div class="row">
-								<div class="col-4 col-5-large col-12-medium">
-									<span class="image fit"><img src="images/drew.jpg" alt="" /></span>
-								</div>
-								<div class="col-8 col-7-large col-12-medium">
-									<header>
+				<div class='miniport-container'>
+					<header>
+						<article id="top" class="wrapper style1">
+							<div class="container">
+								<div class="row">
+									<div class="col-4 col-5-large col-12-medium">
+										<span class="image fit"><img src="images/drew.jpg" alt="" /></span>
+									</div>
+									<div class="col-8 col-7-large col-12-medium">
 										<h1>Hi. I'm <strong>Drew</strong>.</h1>
-									</header>
-									<p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
-									<a href="#work" class="button large scrolly">Learn about what I do</a>
-								</div>
-							</div>
-						</div>
-					</article>
+										<p>I'm a <strong>producer, composer, engineer, and musician</strong>, with an array of experience in the audio world - podcasts, radio, sound design, foley, game music, bands, children's music, and even puppet shows!</p>
 
-				<!-- Work -->
-					<article id="work" class="wrapper style2">
-						<div class="container">
-							<header>
-								<h2>Here's all the stuff I do.</h2>
-								<p>Odio turpis amet sed consequat eget posuere consequat.</p>
-							</header>
-							<div class="row aln-center">
-								<div class="col-4 col-6-medium col-12-small">
-									<section class="box style1">
-										<span class="icon featured fa-comments"></span>
-										<h3>Consequat lorem</h3>
-										<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-									</section>
-								</div>
-								<div class="col-4 col-6-medium col-12-small">
-									<section class="box style1">
-										<span class="icon solid featured fa-camera-retro"></span>
-										<h3>Lorem dolor tempus</h3>
-										<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-									</section>
-								</div>
-								<div class="col-4 col-6-medium col-12-small">
-									<section class="box style1">
-										<span class="icon featured fa-thumbs-up"></span>
-										<h3>Feugiat posuere</h3>
-										<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-									</section>
+											<p>I have an Associate's Degree in Audio Production from McNally Smith College of Music, and have been creating music and manipulating sound for over 20 years.</p>
+											<a href="#main" class="button large scrolly">See some of my recent work</a>
+									</div>
 								</div>
 							</div>
-							<footer>
-								<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-								<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-							</footer>
-						</div>
-					</article>
+						</article>
+					</header>
+				</div>
+
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" /></a>
+							<a
+			            href="https://youtu.be/juN8qEgLScw?autoplay=1"
+			            data-poptrox="youtube"
+			            class="multiimage"
+			            ><img src="images/fulls/01.jpg" alt=""
+			          /></a>
 							<h2>Magna feugiat lorem</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
