--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<a
 			            href="https://youtu.be/juN8qEgLScw?autoplay=1"
 			            data-poptrox="youtube"
-			            class="multiimage"
+
 			            ><img src="images/fulls/01.jpg" alt=""
 			          /></a>
 							<h2>Magna feugiat lorem</h2>
@@ -173,4 +173,7 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+	<script>
+	 $("#main").poptrox();
+	</script>
 </html>
