--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
 									<div class="col-4 col-5-large col-12-medium">
 										<span class="image fit"><img src="images/drew.jpg" alt="" /></span>
 									</div>
-									<div class="col-8 col-7-large col-12-medium">
+									<div class="col-8 col-7-large col-12-medium vert-align-children">
 										<h1>Hi. I'm <strong>Drew</strong>.</h1>
 										<p>I'm a <strong>producer, composer, engineer, and musician</strong>, with an array of experience in the audio world - podcasts, radio, sound design, foley, game music, bands, children's music, and even puppet shows!</p>
 
 											<p>I have an Associate's Degree in Audio Production from McNally Smith College of Music, and have been creating music and manipulating sound for over 20 years.</p>
-											<a href="#main" class="button large scrolly">See some of my recent work</a>
 									</div>
 								</div>
 							</div>
@@ -114,6 +113,23 @@
 						</article>
 					</div>
 
+					<section id="cta" class="wrapper style4">
+        <div class="inner">
+          <header>
+            <h2>Say Hello</h2>
+            <p>
+              Please
+              <a href="mailto:mumblindrew@gmail.com">shoot me an email</a> and
+              say hello!
+            </p>
+						&nbsp;
+						<p><a href="mailto:mumblindrew@gmail.com">mumblindrew@gmail.com</a></p>
+						<img src='images/audiorosemary-small-logo.png' class='small-logo' width='150'/>
+
+          </header>
+        </div>
+      </section>
+
 				<!-- Footer -->
 					<footer id="footer" class="panel">
 						<div class="inner split">
@@ -136,28 +152,6 @@
 								<p class="copyright">
 									&copy; Unttled. Design: <a href="http://html5up.net">HTML5 UP</a>.
 								</p>
-							</div>
-							<div>
-								<section>
-									<h2>Get in touch</h2>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<input type="text" name="name" id="name" placeholder="Name" />
-											</div>
-											<div class="field half">
-												<input type="text" name="email" id="email" placeholder="Email" />
-											</div>
-											<div class="field">
-												<textarea name="message" id="message" rows="4" placeholder="Message"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><input type="submit" value="Send" class="primary" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</form>
-								</section>
 							</div>
 						</div>
 					</footer>
