--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
+							<a href="https://www.youtube.com/watch?v=LNVwQBxo7bQ?autoplay=1" data-poptrox="youtube" class="multiimage"><img src="images/thumbs/02.jpg" alt="" /></a>
 							<h2>Nisl adipiscing</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
