--- a/index.html
+++ b/index.html
@@ -168,6 +168,36 @@
 
 	</body>
 	<script>
-	 $("#main").poptrox({usePopupCaption:true});
+	 $("#main").poptrox({
+                    baseZIndex: 20000,
+                    caption: function($a) {
+
+                        var s = '';
+
+                        $a.nextAll().each(function() {
+                            s += this.outerHTML;
+                        });
+
+                        return s;
+
+                    },
+                    fadeSpeed: 300,
+                    onPopupClose: function() { $body.removeClass('modal-active'); },
+                    onPopupOpen: function() { $body.addClass('modal-active'); },
+                    overlayOpacity: 0,
+                    popupCloserText: '',
+                    popupHeight: 150,
+                    popupLoaderText: '',
+                    popupSpeed: 300,
+                    popupWidth: 150,
+                    selector: '.thumb > a.multiimage',
+                    usePopupCaption: true,
+                    usePopupCloser: true,
+                    usePopupDefaultStyling: false,
+                    usePopupForceClose: true,
+                    usePopupLoader: true,
+                    usePopupNav: true,
+                    windowMargin: 50
+                });
 	</script>
 </html>
