--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 							<a
 			            href="https://youtu.be/juN8qEgLScw?autoplay=1"
 			            data-poptrox="youtube"
+							  class="multiimage"
 
 			            ><img src="images/fulls/01.jpg" alt=""
 			          /></a>
@@ -57,7 +58,7 @@
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="https://youtu.be/LNVwQBxo7bQ?autoplay=1" data-poptrox="youtube"><img src="images/thumbs/02.jpg" alt="" /></a>
+							<a href="https://youtu.be/LNVwQBxo7bQ?autoplay=1" data-poptrox="youtube" class="multiimage"><img src="images/thumbs/02.jpg" alt="" /></a>
 							<h2>Nisl adipiscing</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
