--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<h2>Magna feugiat lorem</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
-					
+					<article class="thumb">
 							<a href="https://youtu.be/LNVwQBxo7bQ?autoplay=1" data-poptrox="youtube"><img src="images/thumbs/02.jpg" title="This right here is a caption." /></a>
 							<h2>Nisl adipiscing</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
