--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 						</article>
 					<article class="thumb">
 							<a href="https://youtu.be/LNVwQBxo7bQ?autoplay=1" data-poptrox="youtube"><img src="images/thumbs/02.jpg" title="This right here is a caption." /></a>
-							<h2>Nisl adipiscing</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Critter Reel</h2>
+							<p>I created a sonic identity for each of these digital characters.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
