--- a/index.html
+++ b/index.html
@@ -168,6 +168,6 @@
 
 	</body>
 	<script>
-	 $("#main").poptrox({usePopupCaption});
+	 $("#main").poptrox({usePopupCaption:true});
 	</script>
 </html>
