--- a/index.html
+++ b/index.html
@@ -46,68 +46,69 @@
 
 				<!-- Main -->
 					<div id="main">
-						<article class="thumb">
+						<article class="thumb video">
 							<a
-			            href="https://youtu.be/juN8qEgLScw?autoplay=1"
-			            data-poptrox="youtube"
-
-			            ><img src="images/fulls/01.jpg" alt=""
-			          /></a>
+			            href="https://youtu.be/juN8qEgLScw?autoplay=true"
+			            data-poptrox="youtube,800x480"
+									class='video'
+			        >
+							<img src="images/fulls/01.jpg" alt=""/>
+							</a>
 							<h2>Magna feugiat lorem</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
+							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" ></a>
 							<h2>Nisl adipiscing</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
+							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" ></a>
 							<h2>Tempus aliquam veroeros</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
+							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" ></a>
 							<h2>Aliquam ipsum sed dolore</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
+							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" ></a>
 							<h2>Cursis aliquam nisl</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
+							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" ></a>
 							<h2>Sed consequat phasellus</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
+							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" ></a>
 							<h2>Mauris id tellus arcu</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
+							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" ></a>
 							<h2>Nunc vehicula id nulla</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" /></a>
+							<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" ></a>
 							<h2>Neque et faucibus viverra</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" /></a>
+							<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" ></a>
 							<h2>Mattis ante fermentum</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" /></a>
+							<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" ></a>
 							<h2>Sed ac elementum arcu</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
+							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" ></a>
 							<h2>Vehicula id nulla dignissim</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
@@ -168,6 +169,6 @@
 
 	</body>
 	<script>
-	 $("#main").poptrox();
+
 	</script>
 </html>
