--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<article class="thumb video">
 							<a
 			            href="https://youtu.be/juN8qEgLScw?autoplay=true"
-			            data-poptrox="youtube,800x480"
+			            data-poptrox="youtube"
 									class='video'
 			        >
 							<img src="images/fulls/01.jpg" alt=""/>
@@ -57,17 +57,10 @@
 							<h2>Magna feugiat lorem</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
 						</article>
-<<<<<<< HEAD
-						<article class="thumb">
-							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" ></a>
-							<h2>Nisl adipiscing</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-=======
 					<article class="thumb">
 							<a href="https://youtu.be/LNVwQBxo7bQ?autoplay=1" data-poptrox="youtube"><img src="images/fulls/02.jpg" title="This right here is a caption." /></a>
 							<h2>Critter Reel</h2>
 							<p>I created a sonic identity for each of these digital characters.</p>
->>>>>>> 0f479b4408d9f2791657eeb20b3c4d4c6696b4cc
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" ></a>
@@ -175,11 +168,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
-	<script>
-<<<<<<< HEAD
 
-=======
-	 $("#main").poptrox({usePopupCaption:true});
->>>>>>> 0f479b4408d9f2791657eeb20b3c4d4c6696b4cc
-	</script>
 </html>
