--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 			            data-poptrox="youtube"
 									class='video'
 			        >
-							<img src="images/fulls/01.jpg" alt=""/>
+							<img src="images/fulls/up_thumb.jpeg" alt=""/>
 							</a>
-							<h2>Magna feugiat lorem</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Podcast Intro + Theme Music</h2>
+							<p>I entirely produced this intro and theme music for a podcast with 30k+ subs and over 100k weekly streams.</p>
 						</article>
 					<article class="thumb">
-							<a href="https://youtu.be/LNVwQBxo7bQ?autoplay=1" data-poptrox="youtube"><img src="images/fulls/02.jpg" title="This right here is a caption." /></a>
+							<a href="https://youtu.be/LNVwQBxo7bQ?autoplay=1" data-poptrox="youtube"><img src="images/fulls/critter_thumb.jpeg"/></a>
 							<h2>Critter Reel</h2>
 							<p>I created a sonic identity for each of these digital characters.</p>
 						</article>
