--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<article class="thumb video">
 							<a
-			            href="https://youtu.be/juN8qEgLScw?autoplay=true"
+			            href="https://youtu.be/ZL7qUY63V-E?autoplay=true"
 			            data-poptrox="youtube"
 									class='video'
 			        >
@@ -63,9 +63,9 @@
 							<p>I created a sonic identity for each of these digital characters.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" ></a>
-							<h2>Tempus aliquam veroeros</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="https://youtu.be/N0Q8pI7_Uf4?autoplay=1" data-poptrox="youtube" class='video'><img src="images/thumbs/hallway_thumb.jpeg" alt="" ></a>
+							<h2>Hallway Run Sequence</h2>
+							<p>I did all sound design and foley for this short video segment.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" ></a>
