--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
 			            data-poptrox="youtube"
 									class='video'
 			        >
-							<img src="images/fulls/up_thumb.jpeg" alt=""/>
+							<img src="images/fulls/up_thumb.jpg" alt=""/>
 							</a>
 							<h2>Podcast Intro + Theme Music</h2>
 							<p>I entirely produced this intro and theme music for a podcast with 30k+ subs and over 100k weekly streams.</p>
 						</article>
 					<article class="thumb">
-							<a href="https://youtu.be/LNVwQBxo7bQ?autoplay=1" data-poptrox="youtube"><img src="images/fulls/critter_thumb.jpeg"/></a>
+							<a href="https://youtu.be/LNVwQBxo7bQ?autoplay=1" data-poptrox="youtube"><img src="images/fulls/critter_thumb.jpg"/></a>
 							<h2>Critter Reel</h2>
 							<p>I created a sonic identity for each of these digital characters.</p>
 						</article>
 						<article class="thumb">
-							<a href="https://youtu.be/N0Q8pI7_Uf4?autoplay=1" data-poptrox="youtube" class='video'><img src="images/thumbs/hallway_thumb.jpeg" alt="" ></a>
+							<a href="https://youtu.be/N0Q8pI7_Uf4?autoplay=1" data-poptrox="youtube" class='video'><img src="images/thumbs/hallway_thumb.jpg" alt="" ></a>
 							<h2>Hallway Run Sequence</h2>
 							<p>I did all sound design and foley for this short video segment.</p>
 						</article>
