--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
 							<p>I created a sonic identity for each of these digital characters.</p>
 						</article>
 						<article class="thumb">
-							<a href="https://youtu.be/N0Q8pI7_Uf4?autoplay=1" data-poptrox="youtube" class='video'><img src="images/thumbs/hallway_thumb.jpg" alt="" ></a>
+							<a href="https://youtu.be/N0Q8pI7_Uf4?autoplay=1" data-poptrox="youtube" class='video'><img src="images/fulls/hallway_thumb.jpg" alt="" ></a>
 							<h2>Hallway Run Sequence</h2>
 							<p>I did all sound design and foley for this short video segment.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" ></a>
-							<h2>Aliquam ipsum sed dolore</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="https://youtu.be/esvJIyFvoSM?autoplay=1" data-poptrox="youtube" class="video"><img src="images/fulls/watercyc_thumb.jpg" alt="" ></a>
+							<h2>Hop On The Water Cycle</h2>
+							<p>I wrote the music, engineered, mixed, and co-produced the digital sequencing.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" ></a>
