--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 							<p>I wrote the music, engineered, mixed, and co-produced the digital sequencing.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" ></a>
-							<h2>Cursis aliquam nisl</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="https://api.soundcloud.com/tracks/1202267272" data-poptrox="soundcloud"><img src="images/fulls/alglass_thumb.jpg" /></a>
+							<h2>KFAI MinneCulture: The Art Of Defying Gravity</h2>
+							<p>I produced, recorded, edited, and narrated this piece for KFAI radio(starting at 0:25 after the intro).</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" ></a>
