--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 							<p>I produced, recorded, edited, and narrated this piece for KFAI radio(starting at 0:25 after the intro).</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" ></a>
-							<h2>Sed consequat phasellus</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="https://bandcamp.com/EmbeddedPlayer/album=2471766780/size=large/bgcol=ffffff/linkcol=0687f5/minimal=true/transparent=true/.html" data-poptrox="iframe,600x400"><img src="images/fulls/troubles_thumb.jpg" /></a>
+							<h2>The Field Birds - "Troubles"</h2>
+							<p>I engineered, mixed, and mastered this record.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" ></a>
