--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<p>I wrote the music, engineered, mixed, and co-produced the digital sequencing.</p>
 						</article>
 						<article class="thumb">
-							<a href="https://api.soundcloud.com/tracks/1202267272" data-poptrox="soundcloud"><img src="images/fulls/alglass_thumb.jpg" /></a>
+							<a href="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1202267272&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true.html" data-poptrox="iframe,600x400"><img src="images/fulls/alglass_thumb.jpg" /></a>
 							<h2>KFAI MinneCulture: The Art Of Defying Gravity</h2>
 							<p>I produced, recorded, edited, and narrated this piece for KFAI radio(starting at 0:25 after the intro).</p>
 						</article>
