--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
 							<p>I produced, recorded, edited, and narrated this piece for KFAI radio(starting at 0:25 after the intro).</p>
 						</article>
 						<article class="thumb">
-							<a href="https://bandcamp.com/EmbeddedPlayer/album=2471766780/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/.html" data-poptrox="iframe,600x400"><img src="images/fulls/troubles_thumb.jpg" /></a>
+							<a href="https://bandcamp.com/EmbeddedPlayer/album=2471766780/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/.html" data-poptrox="iframe,600x470"><img src="images/fulls/troubles_thumb.jpg" /></a>
 							<h2>The Field Birds - "Troubles"</h2>
 							<p>I engineered, mixed, and mastered this record.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" ></a>
-							<h2>Mauris id tellus arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="https://archive.org/embed/phonoboothbdw2022&playlist=1&list_height=150#.html" data-poptrox="iframe,600x400"><img src="images/fulls/phono_thumb.jpg" /></a>
+							<h2>Phonobooth Field Recordings</h2>
+							<p>A set of field recordings I made in 2022.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" ></a>
