--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<p>I engineered, mixed, and mastered this record.</p>
 						</article>
 						<article class="thumb">
-							<a href="https://archive.org/embed/phonoboothbdw2022&playlist=1&list_height=150#.html" data-poptrox="iframe,600x400"><img src="images/fulls/phono_thumb.jpg" /></a>
+							<a href="https://archive.org/embed/phonoboothbdw2022&playlist=1&autoplay=1.html" data-poptrox="iframe,600x400"><img src="images/fulls/phono_thumb.jpg" /></a>
 							<h2>Phonobooth Field Recordings</h2>
 							<p>A set of field recordings I made in 2022.</p>
 						</article>
